# spec-workflow-runner

./: .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENT_DETECTION.md  CIRCUIT_BREAKER_ENHANCEMENT.md  CLAUDE.md  CLAUDE_FLOW_INTEGRATION.md  COMPLETION_DETECTION_DESIGN.md  INTEGRATION_COMPLETE.md  Makefile  README.md  RETRY_INTEGRATION_GUIDE.md  RUNNER_INTEGRATION_COMPLETE.md  SESSION_SUMMARY.md  SMART_COMPLETION_INTEGRATION.md  TUI_ROADMAP.md  WORKER_FIX_SUMMARY.md  claude-flow-worker-diagnosis.md  commit-rescue.py  config.json  continuation-loop.py  detect-active-agents.py  detect-completion.py  diagnose-crash.md  diagnose-workers.py  fix-worker-timeouts.py  integration-example.py  monitor-dashboard.py  probe-status.py  pyproject.toml  retry-with-logging.py  smart-completion-check.py  test_exact_command.py  test_exact_failing_command.py  test_file_handle_thread.py  test_subprocess.py  validate-retry-integration.py
.claude-flow/: README.md  agents.json  domains.json  workflows.json
.github/workflows/: tui_ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md  timeout_handling.md
.spec-workflow/specs/task-auto-fix/: design.md  (+2 more)
docs/: AI_AGENT_INVOCATION_GUIDE.md  CHECKBOX_FORMAT.md  IMPLEMENTATION_SUMMARY.md  ITERATION.md  QUICK_START_3PHASE.md  THREE_PHASE_WORKFLOW.md  TUI_GUIDE.md  TUI_STATUS_SUMMARY.md  VALIDATION_CHECKLIST.md  dart-cli-layer.md
scripts/: check_coverage.py  collect_metrics.py
src/spec_workflow_runner/: __init__.py  completion_checker.py  completion_verify.py  git_hooks.py  monitor.py  pipx_installer.py  progress_count.py  providers.py  retry_handler.py  run_tasks.py  session_monitor.py  subprocess_helpers.py  utils.py  validation_check.py
tests/: test_completion_verify.py  test_git_hooks.py  test_monitor_log_follower.py  test_pipx_installer.py  test_progress_count.py  test_project_cache.py  test_providers.py  test_retry_handler.py  test_run_tasks.py  test_subprocess_monitoring.py  test_task_stats.py  test_utils.py  test_validation_check.py
tests/task_fixer/: __init__.py  test_diff_generator.py  test_file_writer.py  test_fixer.py  test_integration.py  test_prompt_builder.py  test_validator.py
tests/tui/: test_app_integration.py  test_collapse_expand.py  test_footer_bar.py  test_help_panel.py  test_integration.py  test_keybindings_unit.py  test_keyboard_input.py  test_log_viewer.py  test_performance.py  test_poller.py  test_runner_manager.py  test_state.py  test_status_panel.py  test_tree_view.py  test_tui_utils.py  test_viewport_scrolling.py
(+53 files in other folders)
