[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "spec-workflow-runner"
version = "0.1.0"
description = "Automation helpers for iterating on spec-workflow tasks with Codex."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Spec Workflow Maintainers" }]
dependencies = ["rich>=13.7.0"]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pytest>=8.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
spec-workflow-run = "spec_workflow_runner.run_tasks:main"
spec-workflow-monitor = "spec_workflow_runner.monitor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_workflow_runner"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_configs = true
pretty = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

