[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "spec-workflow-runner"
version = "0.1.0"
description = "Automation helpers for iterating on spec-workflow tasks with Codex."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Spec Workflow Maintainers" }]
dependencies = ["rich>=13.7.0"]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
spec-workflow-run = "spec_workflow_runner.run_tasks:main"
spec-workflow-monitor = "spec_workflow_runner.monitor:main"
spec-workflow-pipx = "spec_workflow_runner.pipx_installer:main"
spec-workflow-tui = "spec_workflow_runner.tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_workflow_runner"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_configs = true
pretty = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra --cov=src/spec_workflow_runner --cov-report=html --cov-report=term --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
